Tue Jan 24 13:33:32 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/BasicSP/BMClosedED/BMClosedED_exec.cpp:
          Layout changes

        * rules.ciao.GNU:
          Small simplification

Tue Jan 24 12:05:47 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/GetComponent/Event/Component/GCE_Test_Component_exec.cpp:
        * connectors/dds4ccm/tests/GetComponent/State/Component/GCS_Test_Component_exec.cpp:
          Narrow the result of _get_component to the connector interface

Mon Jan 23 20:21:32 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/taobaseidl3toidl2defaults.mpb:
        * MPC/config/taoidl3toxmidefaults.mpb:
          Fixed again

Mon Jan 23 20:12:06 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/taobaseidl3toidl2defaults.mpb:
        * MPC/config/taoidl3toxmidefaults.mpb:
          Reverted change below, triggers error in normal build

Mon Jan 23 14:35:42 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/taobaseidl3toidl2defaults.mpb:
        * MPC/config/taoidl3toxmidefaults.mpb:
          Fixes for install builds

Mon Jan 23 12:55:55 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/CCM_stub.mpc:
          Reverted change below, the install is needed

Mon Jan 23 12:07:30 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/CCM_stub.mpc:
          Removed not needed post_install

Mon Jan 23 09:45:53 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO_TAO_DAnCE.mwc:
          Also build tools

Mon Jan 23 07:53:26 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/ndds/ndds_idltocpp_skel.mpc:
        * connectors/dds4ccm/idl/ndds/ndds_idltocpp_stub.mpc:
          Fixes for install build

Sun Jan 22 19:03:34 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Hello/DDS_Receiver/Hello_Receiver.cpp: